# scrapy-example

./: README.md  pyproject.toml
data_stars/: scrapy.cfg
data_stars/data_stars/: items.py  middlewares.py  pipelines.py  settings.py
data_stars/data_stars/spiders/: naver.py
data_stars/data_stars/utils/: net.py  os.py  time.py
html/: naver_list_all?query=%7Bkeyword%7D.html
